--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  border-bottom-left-radius: 50%;
+  align-items: center;
 }
 
 a {
@@ -26,7 +26,7 @@ a {
 }
 
 .logo {
-  padding-top: 20px;
+  padding-top: 30px;
   padding-left: 30px;
   color: #6070ff;
   font-weight: bold;
@@ -35,11 +35,11 @@ a {
 .union {
   padding-top: 25px;
   padding-right: 30px;
+  padding-top: 20px;
 }
 
 .content {
   padding-left: 20px;
-  font-family: 'Poppins', serif;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -53,7 +53,6 @@ a {
 }
 
 .second-text {
-  font-family: 'Poppins', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -69,7 +68,6 @@ a {
 
 .let-connect {
   color: #7f8cff;
-  font-family: 'Poppins', serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
