--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ a {
 }
 
 .let-connect {
+  display: flex;
   color: #7f8cff;
   font-style: normal;
   font-weight: 500;
@@ -74,6 +75,14 @@ a {
 }
 
 .icon {
-  padding-top: 7px;
-  margin: 7px;
+  margin: 5px;
+}
+
+ul {
+  padding-left: 1px;
+}
+
+li {
+  display: inline-block;
+  margin: 4px;
 }
